# aoe2rec

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  decompressed_game.hexpat  full_game.hexpat  release-plz.toml
.github/workflows/: npm.yaml  python.yaml  release-plz.yaml
crates/aoe2js/: CHANGELOG.md  Cargo.toml
crates/aoe2js/src/: main.rs
crates/aoe2js_api/: CHANGELOG.md  Cargo.toml
crates/aoe2js_api/src/: lib.rs  main.rs
crates/aoe2rec/: CHANGELOG.md  Cargo.toml
crates/aoe2rec-cli/: .gitignore  Cargo.toml
crates/aoe2rec-cli/src/: main.rs
crates/aoe2rec-js/: CHANGELOG.md  Cargo.toml  README.md
crates/aoe2rec-js/src/: lib.rs
crates/aoe2rec-py/: CHANGELOG.md  Cargo.toml  pyproject.toml
crates/aoe2rec-py/python/aoe2rec_py/: __init__.py  models.py  summary.py
crates/aoe2rec-py/src/: lib.rs
crates/aoe2rec/benches/: benchmark.rs
crates/aoe2rec/src/: actions.rs  ai.rs  destring.rs  lib.rs  minimal.rs  summary.rs  tests.rs
crates/aoe2rec/src/header/: mod.rs
crates/aoe2rec/src/primitives/: bool.rs  destring.rs  lenstring.rs  mod.rs  nullstring.rs
patterns/: aoe2header.hexpat  aoe2operations.hexpat  aoe2record.bt  aoe2record.hexpat  decompressed_game.hexpat  full_game.hexpat
src/: lib.rs  main.rs
