[package]
name = "aoe2rec"
version = "0.5.2"
edition = "2021"
description = "Library to parse Age of Empires II: Definitive Edition recorded games"
license = "MIT"

[dependencies]
binrw = "0.15.0"
bytes = { version = "1.8.0", features = ["std"] }
serde = { version = "1.0.214", features = ["derive"] }
yazi = "0.2.0"
flate2 = { version = "1.1.5", features = ["zlib-rs"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
